# AIProgramming-pku-25fall

./: .gitignore  CMakeLists.txt  README.md  function.cu  setup.py  tensor.cu  tensor.cuh  test.py  utils.cuh
Project/Task1/: HW1 说明文档.docx  HW1.py
csrc/: core.cp313-win_amd64.pyd  function.cuh  pybind.cpp  tensor.cu  utils.cu
torchofdreaveler/: core.cp313-win_amd64.pyd
torchofdreaveler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
